--- a/templates/disposisi.html
+++ b/templates/disposisi.html
@@ -138,6 +138,7 @@
             width: 48%;
             border-right: 1px solid #000;
             padding: 8px;
+            font-size: 9px;
         }
 
         .right-content {
