--- a/templates/disposisi.html
+++ b/templates/disposisi.html
@@ -117,6 +117,7 @@
             border: 1px solid #000;
             margin-right: 2px;
             vertical-align: middle;
+            font-size: 12px;
         }
 
         .bottom-section {
